[package]
name = "zmq_rust"
version = "0.1.0"
authors = ["boaz <soonkuk.kang@blockchainos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
zmq = "0.9.2"
rand = "0.4.0"
rmp = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
clap = "3.0.0-beta.1"